Add i18n to course attributes. A little cleanup of learning record.

--- a/src/lib/service/translation/locales/en.json
+++ b/src/lib/service/translation/locales/en.json
@@ -4,5 +4,7 @@
 	"website": "Website",
 	"completed": "Completed",
 	"in-progress": "In progress",
-	"not started": "Not started"
+	"not started": "Not started",
+	"health-and-safety": "Health & safety",
+	"information-management": "Information management"
 }
