Fix template issues for results page and learner record.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -6,5 +6,9 @@
 	"in-progress": "In progress",
 	"not started": "Not started",
 	"health-and-safety": "Health & safety",
-	"information-management": "Information management"
+	"information-management": "Information management",
+	"all": "all",
+	"courseResult.passed": "Passed",
+	"courseResult.failed": "Failed",
+	"courseResult.complete": "Course complete"
 }
