Better calculation of next required data.
Included an example of mocking xapi data for course completion.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -7,7 +7,7 @@
 	"not started": "Not started",
 	"health-and-safety": "Health & safety",
 	"information-management": "Information management",
-	"all": "all",
+	"diversity-and-equality": "Diversity and equality",
 	"courseResult.passed": "Passed",
 	"courseResult.failed": "Failed",
 	"courseResult.complete": "Course complete"
