Send xAPI statement to register user to event.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -10,5 +10,6 @@
 	"diversity-and-equality": "Diversity and equality",
 	"courseResult.passed": "Passed",
 	"courseResult.failed": "Failed",
-	"courseResult.complete": "Course complete"
+	"courseResult.complete": "Course complete",
+	"bookable": "bookable"
 }
