--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -11,5 +11,7 @@
 	"courseResult.passed": "Passed",
 	"courseResult.failed": "Failed",
 	"courseResult.complete": "Course complete",
-	"bookable": "bookable"
+	"bookable": "bookable",
+	"link": "link",
+	"registered": "registered"
 }
