--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -21,5 +21,6 @@
 	"Level": "Level",
 	"Key area": "Key area",
 	"Location": "Location",
-	"unregistered": "unregistered"
+	"unregistered": "unregistered",
+	"Product code": "Product code"
 }
