Updating states to uppercase.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -2,8 +2,8 @@
 	"elearning": "Online course",
 	"video": "Video",
 	"website": "Website",
-	"completed": "Completed",
-	"in-progress": "In progress",
+	"COMPLETED": "Completed",
+	"IN_PROGRESS": "In progress",
 	"not started": "Not started",
 	"health-and-safety": "Health & safety",
 	"information-management": "Information management",
@@ -13,14 +13,12 @@
 	"courseResult.complete": "Course complete",
 	"face-to-face": "Face to face",
 	"link": "Link",
-	"registered": "Registered",
-	"bookable": "bookable",
+	"REGISTERED": "Registered",
 	"Duration": "Duration",
 	"Price": "Price",
 	"all": "all",
 	"Level": "Level",
 	"Key area": "Key area",
 	"Location": "Location",
-	"unregistered": "unregistered",
 	"Product code": "Product code"
 }
