--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -20,5 +20,119 @@
 	"Level": "Level",
 	"Key area": "Key area",
 	"Location": "Location",
-	"Product code": "Product code"
+	"Product code": "Product code",
+	"proposition_name": "Civil Service Learning",
+	"home_page_title": "Your learning",
+	"required_section_title": "Required learning",
+	"other_section_title": "Other learning",
+	"home_page_suggestions": "Tailored suggestions from %s, your area of work or your organisation.",
+	"home_page_learning_plan_link": "See more learning in your Learning plan",
+	"home_page_suggestions_link": "See more suggestions for you",
+	"required_learning_done": "You have completed all your required learning.",
+	"no_planned_learning_yet" : "You don't have any planned learning yet.",
+	"learning_plan_page_title": "Learning plan",
+	"label_in_progress": "In progress",
+	"label_is_booked": "Booked",
+	"label_is_pending": "Pending",
+	"item_row_due": "Due by DDMMMYYYY",
+	"item_control_resume": "Resume",
+	"item_control_start": "Start",
+	"item_control_remove": "Remove",
+	"item_control_book": "Book now",
+	"item_control_cancel": "Cancel booking",
+	"item_control_add": "Add to learning plan",
+	"suggestions_page_title": "Suggestions for you",
+	"suggestion_section_title": "From name_of_selected_work_area",
+	"learning_record_page_title": "Learning record",
+	"learning_page_feedback_intro": "You can leave feedback on X item(s).",
+	"feedback_thumbs_prompt": "Did you find this learning_type useful?",
+	"learning_record_page_required_all_done": "You have completed all of your required learning courses.",
+	"learning_record_page_required_none_done": "You have completed none of your required learning courses and have X to do.",
+	"learning_record_page_required_some_done": "You have completed X of your required learning courses and have X to do",
+	"learning_record_column_course_title": "Course",
+	"learning_record_column_course_type": "Type",
+	"learning_record_column_course_duration": "Duration",
+	"learning_record_column_course_date": "Completion date",
+	"profile_page_title": "Hello, firstName",
+	"profile_name_label": "Name",
+	"profile_email_label": "Email",
+	"profile_password_label": "Password",
+	"profile_department_label": "Organisation",
+	"profile_area_label": "Area of work",
+	"profile_grade_label": "Grade",
+	"register_for_account_link": "Register for an account",
+	"register_start_page_title": "Register for an account",
+	"register_start_page_intro": "You need to create an account before using the proposition_name. This should take 5 minutes.",
+	"register_email_address_label": "Email address",
+	"register_email_address_confirm_label": "Confirm email address",
+	"register_email_error_title": "There was a problem with your email address",
+	"register_email_error_box_no_input": "You must enter a valid email",
+	"register_email_error_box_no_match": "The email addresses do not match",
+	"register_email_error_label_no_input": "Enter a valid email address",
+	"register_email_error_label_no_match": "Enter a matching email address",
+	"register_name_page_title": "Your name",
+	"register_name_first_name_label": "First name",
+	"register_name_lastt_name_label": "Last name",
+	"register_name_error_title": "There was a problem with your information",
+	"register_name_error_box_no_first": "Your first name does not appear to be valid",
+	"register_name_error_box_no_last": "Your last name does not appear to be valid",
+	"register_name_error_label_no_first": "Enter a valid first name",
+	"register_name_error_label_no_last": "Enter a valid first name",
+	"register_organisation_title": "Your organisation",
+	"register_organisation_label": "Organistion",
+	"register_organisation_label_hint": "Start typing to find your organisation name",
+	"register_organisation_error_title": "There was a problem with your information",
+	"register_organisation_error_none_selected": "Your organisation does not appear to be valid",
+	"register_organisation_error_label": "Select your organisation",
+	"register_area_page_title": "Your area of work",
+	"register_area_page_intro": "Select all the areas of work that are relevant to your job.",
+	"register_area_error_title": "There was a problem with your information",
+	"register_area_error_none_selected": "You must select at least one area of work",
+	"register_area_other_label": "Please clarify",
+	"register_grade_page_title": "Your grade",
+	"register_grade_error_title": "There was a problem with your information",
+	"register_grade_error_none_selected": "You must select a grade",
+	"register_grade_other_label": "Please clarify",
+	"register_password_page_title": "Create a password",
+	"register_password_page_intro": "Your password must have:",
+	"register_password_page_list_items": ["8 or more characters", "at least 1 number", "upper and lower case letters"],
+	"register_password_first_label": "Create a password",
+	"register_password_second_label": "Retype your password",
+	"register_password_error_title": "There was a problem with your password",
+	"register_password_error_box_none_entered": "Your password is too short",
+	"register_password_error_label_none_entered": "Enter a valid password",
+	"register_password_error_box_too_simple": "Your password is not complex enough",
+	"register_password_error_label_too_simple": "Enter a valid password",
+	"register_password_error_box_no_match": "Your passwords do not match",
+	"register_password_error_label_no_match": "Enter a matching password",
+	"register_review_page_title": "Your registration details",
+	"register_review_page_intro": "Check your details are correct before completing registration.",
+	"register_review_page_cta": "Complete registration",
+	"register_complete_title": "Registration complete",
+	"register_complete_intro": "Your account with proposition_name has been created",
+	"register_complete_sub_title": "What happens next?",
+	"register_complete_p1": "We have sent you a confirmation email.",
+	"register_complete_p2": "You can now (sign into the proposition_name)[/path/to/sign/in/page].",
+	"register_process_cta": "Continue",
+	"register_process_cta_edit": "Save changes",
+	"signin_page_title": "Sign in",
+	"signin_page_email_input": "Email address",
+	"signin_page_password_input": "Password",
+	"signin_page_error_title": "There was a problem with your sign-in details",
+	"signin_page_error_box_message": "Please try again",
+	"signin_page_button": "Sign in",
+	"time_hour_singluar": "hour",
+	"time_hour_plural": "hours",
+	"time_minute_plural": "minutes",
+	"banner_course_added_title": "Course successfully added",
+	"banner_course_added_text": "This course has successfully been added to your learning plan",
+	"banner_course_remove_warning_title": "Are you sure you want to remove this course?",
+	"banner_course_remove_warning_text": "You have already started this course and your progress may be lost.",
+	"banner_course_remove_warning_yes": "Yes, remove this course",
+	"banner_course_remove_warning_no": "No, keep it",
+	"banner_course_removed_title": "Course successfully removed",
+	"banner_course_removed_text": "The course has successfully been removed from your learning plan",
+	"search_reults_page_title": "Search results",
+	"search_results_page_intro": "There were X results for search_term",
+	"page_title_tag": "relevant_page_title - proposition_name"
 }
