Updating to latest code base and catalogue API changes.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -11,7 +11,7 @@
 	"courseResult.passed": "Passed",
 	"courseResult.failed": "Failed",
 	"courseResult.complete": "Course complete",
-	"face-to-face": "Face to face",
+	"face-to-face": "Classroom",
 	"link": "Link",
 	"REGISTERED": "Registered",
 	"Duration": "Duration",
