CHange registered status label to booked

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -13,7 +13,7 @@
 	"courseResult.complete": "Course complete",
 	"face-to-face": "Classroom",
 	"link": "Link",
-	"REGISTERED": "Registered",
+	"REGISTERED": "Booked",
 	"Duration": "Duration",
 	"Price": "Price",
 	"all": "all",
