Blended learning page showing modules and status.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -184,5 +184,9 @@
 	"profile_name_label": "profile_name_label",
 	"profile_email_label": "profile_email_label",
 	"profile_area_label": "profile_area_label",
-	"Organisation": "Organisation"
+	"Organisation": "Organisation",
+	"action_COMPLETED": "Retake",
+	"action_IN_PROGRESS": "Resume",
+	"action_NOT_STARTED": "Start",
+	"NOT_STARTED": "NOT_STARTED"
 }
