--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -202,5 +202,6 @@
 	"learning_feedback_submitted_title": "Thank you for your feedback",
 	"learning_feedback_submitted_message": "Leaving feedback helps us improve our service.",
 	"booking_must_select_date_title": "No date selected",
-	"booking_must_select_date_message": "Please select the date you would like to attend this course."
+	"booking_must_select_date_message": "Please select the date you would like to attend this course.",
+	"project-delivery": "project-delivery"
 }
