Include course title in added to learning plan success message.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -189,8 +189,8 @@
 	"action_IN_PROGRESS": "Resume",
 	"action_NOT_STARTED": "Start",
 	"NOT_STARTED": "NOT_STARTED",
-	"learning_added_to_plan_title": "Course successfully added",
-	"learning_added_to_plan_message": "This course has successfully been added to your learning plan",
+	"learning_added_to_plan_title": "%s successfully added",
+	"learning_added_to_plan_message": "%s has been successfully added to your learning plan",
 	"feedback_content_title": "Content",
 	"feedback_content_description": "Was the %s content comprehensive enough for you?",
 	"feedback_relevance_title": "Relevance",
