Label blended as mixed for now.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -163,7 +163,7 @@
 	"top_nav_learning_record": "Learning record",
 	"top_nav_learning_plan": "Learning plan",
 	"top_nav_profile": "Profile",
-	"blended": "Blended",
+	"blended": "Mixed",
 	"BOOKED": "BOOKED",
 	"AA": "AA",
 	"G7": "G7",
