--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,5 +1,11 @@
 {
-	"elearning": "Online",
+	"audience_department_label": "Organisation(s)",
+	"audience_area_label": "Area(s) of work",
+	"audience_grade_label": "Grade(s)",
+	"audience_mandatory_label": "Mandatory",
+	"audience_frequency_label": "Frequency",
+	"audience_required-by_label": "Required By",
+	"elearning": "Online course",
 	"video": "Video",
 	"website": "Website",
 	"COMPLETED": "Completed",
@@ -11,9 +17,9 @@
 	"courseResult.passed": "Passed",
 	"courseResult.failed": "Failed",
 	"courseResult.complete": "Course complete",
-	"face-to-face": "Classroom",
+	"face-to-face": "Face to face",
 	"link": "Link",
-	"REGISTERED": "Booked",
+	"REGISTERED": "Registered",
 	"Duration": "Duration",
 	"Price": "Price",
 	"all": "all",
@@ -25,7 +31,8 @@
 	"home_page_title": "Your learning",
 	"required_section_title": "Required learning",
 	"other_section_title": "Other learning",
-	"home_page_suggestions": "Tailored suggestions from %s, your area of work or your organisation.",
+	"home_page_suggestions":
+		"Tailored suggestions from %s, your area of work or your organisation.",
 	"home_page_learning_plan_link": "See more learning in your Learning plan",
 	"home_page_suggestions_link": "See more suggestions for you",
 	"required_learning_done": "You have completed all your required learning.",
@@ -46,24 +53,27 @@
 	"learning_record_page_title": "Learning record",
 	"learning_page_feedback_intro": "You can leave feedback on X item(s).",
 	"feedback_thumbs_prompt": "Did you find this learning_type useful?",
-	"learning_record_page_required_all_done": "You have completed all of your required learning courses.",
-	"learning_record_page_required_none_done": "You have completed none of your required learning courses and have X to do.",
-	"learning_record_page_required_some_done": "You have completed X of your required learning courses and have X to do",
+	"learning_record_page_required_all_done":
+		"You have completed all of your required learning courses.",
+	"learning_record_page_required_none_done":
+		"You have completed none of your required learning courses and have X to do.",
+	"learning_record_page_required_some_done":
+		"You have completed X of your required learning courses and have X to do",
 	"learning_record_column_course_title": "Course",
 	"learning_record_column_course_type": "Type",
 	"learning_record_column_course_duration": "Duration",
 	"learning_record_column_course_date": "Completion date",
 	"profile_page_title": "Hello, %s",
-	"profile_given-name_label": "Name",
-	"profile_email-address_label": "Email",
+	"profile_name_label": "Name",
+	"profile_email_label": "Email",
 	"profile_password_label": "Password",
 	"profile_department_label": "Organisation",
-	"profile_areas-of-work_label": "Area of work",
+	"profile_area_label": "Area of work",
 	"profile_grade_label": "Grade",
-	"profile_updated": "Profile successfully updated",
 	"register_for_account_link": "Register for an account",
 	"register_start_page_title": "Register for an account",
-	"register_start_page_intro": "You need to create an account before using the proposition_name. This should take 5 minutes.",
+	"register_start_page_intro":
+		"You need to create an account before using the proposition_name. This should take 5 minutes.",
 	"register_email_address_label": "Email address",
 	"register_email_address_confirm_label": "Confirm email address",
 	"register_email_error_title": "There was a problem with your email address",
@@ -75,20 +85,27 @@
 	"register_name_first_name_label": "First name",
 	"register_name_last_name_label": "Last name",
 	"register_name_error_title": "There was a problem with your information",
-	"register_name_error_box_no_first": "Your first name does not appear to be valid",
-	"register_name_error_box_no_last": "Your last name does not appear to be valid",
+	"register_name_error_box_no_first":
+		"Your first name does not appear to be valid",
+	"register_name_error_box_no_last":
+		"Your last name does not appear to be valid",
 	"register_name_error_label_no_first": "Enter a valid first name",
 	"register_name_error_label_no_last": "Enter a valid first name",
 	"register_organisation_title": "Your organisation",
 	"register_organisation_label": "Organisation",
-	"register_organisation_label_hint": "Start typing to find your organisation name",
-	"register_organisation_error_title": "There was a problem with your information",
-	"register_organisation_error_none_selected": "Your organisation does not appear to be valid",
+	"register_organisation_label_hint":
+		"Start typing to find your organisation name",
+	"register_organisation_error_title":
+		"There was a problem with your information",
+	"register_organisation_error_none_selected":
+		"Your organisation does not appear to be valid",
 	"register_organisation_error_label": "Select your organisation",
 	"register_area_page_title": "Your area of work",
-	"register_area_page_intro": "Select all the areas of work that are relevant to your job.",
+	"register_area_page_intro":
+		"Select all the areas of work that are relevant to your job.",
 	"register_area_error_title": "There was a problem with your information",
-	"register_area_error_none_selected": "You must select at least one area of work",
+	"register_area_error_none_selected":
+		"You must select at least one area of work",
 	"register_area_other_label": "Please clarify",
 	"register_grade_page_title": "Your grade",
 	"register_grade_error_title": "There was a problem with your information",
@@ -106,18 +123,22 @@
 	"register_password_error_title": "There was a problem with your password",
 	"register_password_error_box_none_entered": "Your password is too short",
 	"register_password_error_label_none_entered": "Enter a valid password",
-	"register_password_error_box_too_simple": "Your password is not complex enough",
+	"register_password_error_box_too_simple":
+		"Your password is not complex enough",
 	"register_password_error_label_too_simple": "Enter a valid password",
 	"register_password_error_box_no_match": "Your passwords do not match",
 	"register_password_error_label_no_match": "Enter a matching password",
 	"register_review_page_title": "Your registration details",
-	"register_review_page_intro": "Check your details are correct before completing registration.",
+	"register_review_page_intro":
+		"Check your details are correct before completing registration.",
 	"register_review_page_cta": "Complete registration",
 	"register_complete_title": "Registration complete",
-	"register_complete_intro": "Your account with proposition_name has been created",
+	"register_complete_intro":
+		"Your account with proposition_name has been created",
 	"register_complete_sub_title": "What happens next?",
 	"register_complete_p1": "We have sent you a confirmation email.",
-	"register_complete_p2": "You can now (sign into the proposition_name)[/path/to/sign/in/page].",
+	"register_complete_p2":
+		"You can now (sign into the proposition_name)[/path/to/sign/in/page].",
 	"register_process_cta": "Continue",
 	"register_process_cta_edit": "Save changes",
 	"signin_page_title": "Sign in",
@@ -130,20 +151,24 @@
 	"time_hour_plural": "hours",
 	"time_minute_plural": "minutes",
 	"banner_course_added_title": "Course successfully added",
-	"banner_course_added_text": "This course has successfully been added to your learning plan",
-	"banner_course_remove_warning_title": "Are you sure you want to remove this course?",
-	"banner_course_remove_warning_text": "You have already started this course and your progress may be lost.",
+	"banner_course_added_text":
+		"This course has successfully been added to your learning plan",
+	"banner_course_remove_warning_title":
+		"Are you sure you want to remove this course?",
+	"banner_course_remove_warning_text":
+		"You have already started this course and your progress may be lost.",
 	"banner_course_remove_warning_yes": "Yes, remove this course",
 	"banner_course_remove_warning_no": "No, keep it",
 	"banner_course_removed_title": "Course successfully removed",
-	"banner_course_removed_text": "The course has successfully been removed from your learning plan",
+	"banner_course_removed_text":
+		"The course has successfully been removed from your learning plan",
 	"search_results_page_title": "Search results",
 	"search_results_page_intro": "There were X results for search_term",
 	"top_nav_suggestions_page": "Suggestions for you",
 	"top_nav_learning_record": "Learning record",
 	"top_nav_learning_plan": "Learning plan",
 	"top_nav_profile": "Profile",
-	"blended": "Mixed",
+	"blended": "Blended",
 	"BOOKED": "BOOKED",
 	"AA": "AA",
 	"G7": "G7",
@@ -161,8 +186,8 @@
 		"SCS": "Director"
 	},
 	"departments": {
-		"hmrc": "HM Revenue & Customs",
-		"dh": "Department of Health & Social Care",
+		"ho": "Home Office",
+		"dh": "Department of Health",
 		"co": "Cabinet Office"
 	},
 	"areas-of-work": {
@@ -178,39 +203,23 @@
 		"legal": "Legal",
 		"property": "Property"
 	},
-	"accessibility-requirements": {
-		"sign-language": "Sign language interpreter",
-		"cart": "CART (communication access real-time translation) services",
-		"large-print": "Large print",
-		"braille": "Braille",
-		"assistive-listening": "Assistive listening device",
-		"assistant": "An assistant will accompany me"
+	"mandatory": {
+		"true": "True",
+		"false": "False"
+	},
+	"frequency": {
+		"YEARLY": "Yearly",
+		"THREE_YEARLY": "Three Yearly",
+		"FIVE_YEARLY": "Five Yearly"
 	},
 	"responsibility-for-information": "responsibility-for-information",
-	"profile_name_label": "profile_name_label",
-	"profile_email_label": "profile_email_label",
-	"profile_area_label": "profile_area_label",
-	"Organisation": "Organisation",
-	"action_COMPLETED": "Retake",
-	"action_IN_PROGRESS": "Resume",
-	"action_NOT_STARTED": "Start",
-	"NOT_STARTED": "NOT_STARTED",
-	"learning_added_to_plan_title": "%s",
-	"learning_added_to_plan_message": "This has been added to your learning plan",
-	"learning_removed_from_plan_title": "%s",
-	"learning_removed_from_plan_message": "This has been removed from your learning plan",
-	"feedback_content_title": "Content",
-	"feedback_content_description": "Was the %s content comprehensive enough for you?",
-	"feedback_relevance_title": "Relevance",
-	"feedback_relevance_description": "Do you think the course delivered the learning outcomes?",
-	"feedback_presentation_title": "Presentation",
-	"feedback_presentation_description": "Did you like the way the course was delivered?",
-	"feedback_interactivity_title": "Interactivity",
-	"feedback_interactivity_description": "Was the course easy to open and use?",
-	"learning_feedback_submitted_title": "Thank you for your feedback",
-	"learning_feedback_submitted_message": "Leaving feedback helps us improve our service.",
-	"booking_must_select_date_title": "No date selected",
-	"booking_must_select_date_message": "Please select the date you would like to attend this course.",
+	"digital": "digital",
+	"inclusion-and-diversity": "inclusion-and-diversity",
+	"project-delivery": "project-delivery",
 	"commercial": "commercial",
-	"project-delivery": "project-delivery"
+	"departmentprofile_department_label": "departmentprofile_department_label",
+	"areasOfWork": "areasOfWork",
+	"audience_undefined_label": "audience_undefined_label",
+	"audience_profile_grade_label_label": "audience_profile_grade_label_label",
+	"required-by": "required-by"
 }
