Pull course record into search remove retrieved verb entries
removed console.log

removed console.log

Pull course records in to search results , remove retrieved verb

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -251,5 +251,9 @@
 	"was": {
 		"one": "was",
 		"other": "were"
-	}
+	},
+	"digital": "digital",
+	"commercial": "commercial",
+	"communications": "communications",
+	"project-delivery": "project-delivery"
 }
