--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -70,6 +70,10 @@
 	"profile_department_label": "Organisation",
 	"profile_area_label": "Area of work",
 	"profile_grade_label": "Grade",
+	"profile_given-name_label": "Name",
+	"profile_email-address_label": "Email",
+	"profile_areas-of-work_label": "Area of work",
+	"profile_updated": "Profile successfully updated",
 	"register_for_account_link": "Register for an account",
 	"register_start_page_title": "Register for an account",
 	"register_start_page_intro":
