--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -263,5 +263,9 @@
 		"braille": "Braille",
 		"assistive-listening": "Assistive listening device",
 		"assistant": "An assistant will accompany me"
+	},
+	"%s module": {
+		"one": "%s module",
+		"other": "%s modules"
 	}
 }
