--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -227,6 +227,9 @@
 	"learning_removed_from_plan_title": "%s",
 	"learning_removed_from_plan_message":
 		"This has been removed from your learning plan",
+	"learning_confirm_removal_plan_title": "Are you sure you want to remove %s?",
+	"learning_confirm_removal_plan_message":
+		"If you remove this course, it will be deleted from your learning plan",
 	"feedback_content_title": "Content",
 	"feedback_content_description":
 		"Was the %s content comprehensive enough for you?",
