LPFG-275 use module.complete message if it's a module

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -18,6 +18,7 @@
 	"courseResult.passed": "Passed",
 	"courseResult.failed": "Failed",
 	"courseResult.complete": "Course complete",
+	"moduleResult.complete": "Module complete",
 	"face-to-face": "Face to face",
 	"link": "Link",
 	"REGISTERED": "Registered",
