LPFG-288 LPFG-279 LPFG-337 LPFG-49: new identity and profile services
Hooked UI up to new OAuth based identity service for login and logout.

Using accessToken from OAuth service, authenticate, query and update learner details
to the new profile service. This uses HAL so introduced new dependency - traverson-hal
to navigate the API.

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -190,6 +190,7 @@
 		"EO": "First line manager",
 		"HEO": "Middle manager",
 		"G6": "Senior manager",
+		"G7": "Grade 7",
 		"SCS": "Director"
 	},
 	"departments": {
