--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -250,5 +250,6 @@
 		"link": "Link",
 		"elearning": "Online",
 		"video": "Video"
-	}
+	},
+	"profile_areas-of-wor_label": "profile_areas-of-wor_label"
 }
