fixing name of dept of health

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -175,7 +175,7 @@
 	},
 	"departments": {
 		"hmrc": "HM Revenue & Customs",
-		"dh": "Department of Health",
+		"dh": "Department of Health & Social Care",
 		"co": "Cabinet Office"
 	},
 	"areas-of-work": {
