--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -205,6 +205,7 @@
 	"action_COMPLETED": "Retake",
 	"action_IN_PROGRESS": "Resume",
 	"action_NOT_STARTED": "Start",
+	"action_video_COMPLETED": "Restart",
 	"NOT_STARTED": "NOT_STARTED",
 	"learning_added_to_plan_title": "%s",
 	"learning_added_to_plan_message": "This has been added to your learning plan",
