Logging in file validator

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -184,7 +184,7 @@
 	"PB1": "Senior Civil Service - Deputy Director",
 	"PB2": "Senior Civil Service - Director",
 	"PB3": "Senior Civil Service - Director General",
-	"PS":  "Senior Civil Service - Permanent Secretary",
+	"PS": "Senior Civil Service - Permanent Secretary",
 	"grades": {
 		"AA": "Administrative Assistant",
 		"AO": "Administrative Officer",
@@ -196,7 +196,7 @@
 		"PB1": "Senior Civil Service - Deputy Director",
 		"PB2": "Senior Civil Service - Director",
 		"PB3": "Senior Civil Service - Director General",
-		"PS":  "Senior Civil Service - Permanent Secretary"
+		"PS": "Senior Civil Service - Permanent Secretary"
 	},
 	"departments": {
 		"hmrc": "HM Revenue & Customs",
@@ -303,5 +303,6 @@
 	},
 	"moduleResult": {
 		"complete": "Module complete"
-	}
+	},
+	"file": "file"
 }
