LPFG-416 Implement registrations endpoint

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -304,5 +304,6 @@
 	"moduleResult": {
 		"complete": "Module complete"
 	},
-	"file": "file"
+	"file": "file",
+	"action_REGISTERED": "action_REGISTERED"
 }
