Registered should show up as Requested

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -16,7 +16,7 @@
 	"diversity-and-equality": "Diversity and equality",
 	"face-to-face": "Face to face",
 	"link": "Link",
-	"REGISTERED": "Registered",
+	"REGISTERED": "Requested",
 	"Duration": "Duration",
 	"Price": "Price",
 	"all": "all",
@@ -231,6 +231,7 @@
 	"action_IN_PROGRESS": "Resume",
 	"action_NOT_STARTED": "Start",
 	"action_video_COMPLETED": "Restart",
+	"action_REGISTERED": "Requested",
 	"NOT_STARTED": "NOT_STARTED",
 	"learning_added_to_plan_title": "%s",
 	"learning_added_to_plan_message": "This has been added to your learning plan",
