--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -220,29 +220,24 @@
 	"action_video_COMPLETED": "Restart",
 	"action_REGISTERED": "Requested",
 	"NOT_STARTED": "NOT_STARTED",
+	"action_BOOK": "Book",
+	"action_DOWNLOAD": "Download document",
 	"learning_added_to_plan_title": "%s",
 	"learning_added_to_plan_message": "This has been added to your learning plan",
 	"learning_removed_from_plan_title": "%s",
 	"learning_confirm_removal_plan_title": "Are you sure you want to remove %s?",
-	"learning_confirm_removal_plan_message":
-		"If you remove this course, it will be deleted from your learning plan",
-	"learning_confirm_skip_plan_title":
-		"Are you sure you want to say you did not attend %s?",
-	"learning_confirm_skip_plan_message":
-		"Are you sure you did not attend? This will remove it from your learning plan",
-	"learning_confirm_move_plan_title":
-		"Are you sure you want to add %s to your learning record?",
-	"learning_confirm_move_plan_message":
-		"You should only add it to your learning record if you attended it.",
+	"learning_confirm_removal_plan_message": "If you remove this course, it will be deleted from your learning plan",
+	"learning_confirm_skip_plan_title": "Are you sure you want to say you did not attend %s?",
+	"learning_confirm_skip_plan_message": "Are you sure you did not attend? This will remove it from your learning plan",
+	"learning_confirm_move_plan_title": "Are you sure you want to add %s to your learning record?",
+	"learning_confirm_move_plan_message": "You should only add it to your learning record if you attended it.",
 	"learning_confirm_skip_yes_option": "Yes, remove it",
 	"learning_confirm_skip_no_option": "No, keep it",
 	"learning_confirm_move_yes_option": "Yes, add it",
 	"learning_confirm_move_no_option": "No",
 	"learning_skipped_title": "%s",
-	"learning_skipped_from_plan_message":
-		"This has been removed from your learning plan",
-	"learning_removed_from_plan_message":
-		"This has been removed from your learning plan",
+	"learning_skipped_from_plan_message": "This has been removed from your learning plan",
+	"learning_removed_from_plan_message": "This has been removed from your learning plan",
 	"feedback_content_title": "Content",
 	"feedback_content_description": "Was the %s content comprehensive enough for you?",
 	"feedback_relevance_title": "Relevance",
@@ -262,6 +257,10 @@
 	"was": {
 		"one": "was",
 		"other": "were"
+	},
+	"is": {
+		"one": "is %s",
+		"other": "are %s"
 	},
 	"digital": "digital",
 	"commercial": "commercial",
@@ -304,5 +303,6 @@
 	"moduleResult": {
 		"complete": "Module complete"
 	},
+	"cancel": "cancel",
 	"file": "file"
 }
