Mark modules as optional and modify course completion prompt

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -302,5 +302,6 @@
 	"file": "file",
 	" areas-of-work": " areas-of-work",
 	" departments": " departments",
-	" interests": " interests"
+	" interests": " interests",
+	"SCS": "SCS"
 }
